[metadata]
name = FluxResponse
version = 0.1.0
author = Francisco Rodríguez Candón
author_email = francandon@unizar.es
description = A Python package for convoluting a theoretical flux grid with the ARF and RMF response files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francandon/FluxResponse
project_urls =
    Bug Tracker = https://github.com/francandon/AstroClass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = FluxResponse
packages = find:
python_requires = >=3.7
install_requires =
    astropy
    numpy
    pandas
    matplotlib
    scipy

    # Add other dependencies here

[options.packages.find]
where = FluxResponse
