[metadata]
name = FluxResponse
version = 0.1.0
author = Francisco Rodríguez Candón
author_email = francandon@unizar.es
description = A Python package for astronomical data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francandon/AstroClass
project_urls =
    Bug Tracker = https://github.com/francandon/AstroClass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    astropy
    numpy
    pandas
    matplotlib
    scipy

[options.packages.find]
where = .
